# CKBuilder

ckbuilder-journey/: README.md
ckbuilder-journey/articles/: i-came-looking-for-smart-contracts-ckb-gave-me-verifiers.md
ckbuilder-journey/experiments/: README.md  day-04-ccc-playground-transfer.ts  day-04-playground-observations.md
ckbuilder-journey/experiments/week-02/simple-lock/: get-live-cell-unknown-response.json  hash-lock-observations.md
ckbuilder-journey/experiments/week-02/simple-transfer/: query-tx.sh  transfer-observations.md
ckbuilder-journey/experiments/week-02/store-data-on-cell/: decode-hex.js  get-live-cell-response.json  query-live-cell.sh  store-data-observations.md
ckbuilder-journey/experiments/week-02/xudt/: xudt-observations.md
ckbuilder-journey/experiments/week-03/ckb-rust-script/contracts/hello-world/: Cargo.toml
ckbuilder-journey/experiments/week-03/ckb-rust-script/contracts/hello-world/src/: main.rs
ckbuilder-journey/experiments/week-04/: .gitignore
ckbuilder-journey/notes/: 01-how-ckb-works.md  02-cell-model.md  02-core-structures.md  03-core-structures.md  03-transaction-anatomy.md  04-transaction-anatomy.md  04-transfer-and-tx-state.md  05-data-cells-and-hashes.md  05-tooling-log.md  06-signing-and-witness-anatomy.md  07-xudt-and-type-scripts.md  08-custom-lock-hash-lock.md  11-minimal-script-and-syscalls.md  12-type-id-upgradeability.md  13-zk-attestation-cell-sketch.md  14-ckb-std-verifier-runtime-map.md
ckbuilder-journey/reports/: week-01.md  week-02.md  week-03.md  week-04.md  week-05.md  week-06.md
(+33 files in other folders)
