[package]
name = "hello-world"
version = "0.1.0"
edition = "2024"

[dependencies]
ckb-std = { version = "1.1", features = ["dummy-atomic"] }
molecule = { version = "0.9.2", default-features = false, features = ["bytes_vec"] }


[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]
